# bdrc-bag

./: README.md  build-bag-exe.sh  pyproject.toml  requirements.txt  setup-bag-build.sh
bag/: bag_main.py
bdrc_bag/: README.md  build-bag-exe.sh  build-bag.sh  pyproject.toml  test-sync-from-db  x_setup.py
bdrc_bag/test/: bag_tests.py
test/TestWork/images/TestWork-Images1/: TW1-Images10002.txt
